feat: fetch transactions
